Compiler/testdata/prometheus-tests/negatives/Negative2.java
class Klasse1 {
	/* Missing ]; with multidimensional array */
	public int[][[] z4;
}
